# sar-optical-fusion

./: .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements.txt  train_log.txt  train_log_gpu.txt  train_log_gpu_final.txt
configs/: base.yaml  colab_t4.yaml  kaggle_p100.yaml  multimodal_full.yaml  pretrain_sar.yaml
demo/: app.py
docs/: architecture.md  boundary_aware_loss_plan.md  deployment.md
notebooks/: colab_train.ipynb  kaggle_train.ipynb  kaggle_train.py  make_kaggle_nb.py  make_nb.py
scripts/: download_m4sar.py  generate_demo_dataset.py  prepare_m4sar.sh  run_ablations.py  train_multimodal.sh
src/: __init__.py  api.py  eval.py  export.py  predict.py  train.py
src/datasets/: __init__.py  m4_sar.py  preprocess.py  sardet.py
src/datasets/augmentation/: __init__.py  camo_synth.py  lee_filter.py  stress.py
src/losses/: __init__.py  box_loss.py  camouflage_aware.py  detection_loss.py
src/models/: __init__.py  baselines.py  cmafm.py  encoder.py  full_model.py  head.py  neck.py
src/utils/: __init__.py  visualization.py  wandb_logger.py
tests/: test_baselines_and_stress.py  test_full_pipeline.py
