[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sar-optical-fusion"
version = "0.1.0"
description = "SAR ve Optik Uydu Görüntülerinde Çift Akımlı Çapraz-Modal Füzyon ile Hedef Tespiti"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Roham R. Kerahroudi", email = "roham.kerahroudi@ogr.sakarya.edu.tr"}
]
keywords = ["SAR", "optical", "satellite", "object-detection", "multimodal-fusion", "remote-sensing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/RohamRasouli/sar-optical-fusion"
Repository = "https://github.com/RohamRasouli/sar-optical-fusion"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
